syntax = "proto3";

package bus.v1;

option go_package = "github.com/0xRichardL/vibe-copy-trading/libs/go/domain/bus/v1;busv1";

// SignalAction enumerates the semantic action represented by a signal.
enum SignalAction {
  SIGNAL_ACTION_UNSPECIFIED = 0;
  SIGNAL_ACTION_OPEN = 1;
  SIGNAL_ACTION_CLOSE = 2;
  SIGNAL_ACTION_INCREASE = 3;
  SIGNAL_ACTION_DECREASE = 4;
  SIGNAL_ACTION_FLIP = 5;
}

// SignalSide captures the resulting position orientation after a signal is applied.
enum SignalSide {
  SIGNAL_SIDE_UNSPECIFIED = 0;
  SIGNAL_SIDE_LONG = 1;
  SIGNAL_SIDE_SHORT = 2;
  SIGNAL_SIDE_FLAT = 3;
}

// Signal is the canonical normalized signal published to the influencer_signals topic.
message Signal {
  // Globally unique, deterministic ID for the signal.
  string signal_id = 1;

  // Internal ID or reference for the influencer (not necessarily the raw Hyperliquid address).
  string influencer_id = 2;

  // Exchange identifier, e.g. "hyperliquid".
  string exchange = 3;

  // Hyperliquid market identifier (e.g., "ETH-PERP").
  string market = 4;

  // Semantic action: OPEN, CLOSE, INCREASE, DECREASE, FLIP.
  SignalAction action = 5;

  // Resulting position side after the event: LONG, SHORT, FLAT.
  SignalSide side = 6;

  // Resulting position size after applying this event (base units).
  double size = 7;

  // Signed change in position size from the previous state.
  double delta_size = 8;

  // Relevant execution or average entry price.
  double price = 9;

  // Event time from Hyperliquid in Unix millis.
  int64 timestamp_ms = 10;

  // Reference to the underlying Hyperliquid event (e.g., tx hash / event ID / sequence).
  string source_event_id = 11;

  // Optional free-form metadata (e.g., leverage, margin mode, raw symbol).
  map<string, string> metadata = 12;
}
